[gd_scene load_steps=5 format=3 uid="uid://xgofwbftqct5"]

[ext_resource type="Script" path="res://turret.gd" id="1_f3cfr"]
[ext_resource type="Texture2D" uid="uid://bepnntqhnc2hm" path="res://entity/buildings/eewerrwerw.png" id="1_nusmi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ceudx"]
size = Vector2(43, 54.25)

[sub_resource type="CircleShape2D" id="CircleShape2D_qbudr"]
radius = 149.003

[node name="Turret1" type="StaticBody2D"]
script = ExtResource("1_f3cfr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.125)
shape = SubResource("RectangleShape2D_ceudx")

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(0, -35.01)

[node name="Home1" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_nusmi")

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_qbudr")

[node name="BulletContainer" type="Node2D" parent="."]

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
